--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         cx="65" cy="65" r="58"></circle>
             </svg>
             <div>
-              <img src="images/wind.png" alt="">
+              <img src="wind.png" alt="">
             </div>
           </div>
           <div class="box1_content">
@@ -38,7 +38,7 @@
                         cx="65" cy="65" r="58"></circle>
             </svg>
             <div>
-              <img src="images/ph.png" alt="">
+              <img src="ph.png" alt="">
             </div>
           </div>
           <div class="box2_content">
@@ -52,27 +52,27 @@
       <div class="main_box2">
         <div class="box_3">
           <div class="image1">
-            <img src="images/bubbles.png" alt="" />
+            <img src="bubbles.png" alt="" />
           </div>
           <div class="box3_content">
             <div>Turbidity</div>
             <div id="turb_val">0</div>
           </div>
           <div class="image2">
-            <img src="images/equaliser.png " alt="" />
+            <img src="equaliser.png " alt="" />
           </div>
         </div>
         <div class="box_4">
           <div class="box4_img1">
-            <img src="images/humidity.png" alt="" />
+            <img src="humidity.png" alt="" />
           </div>
           <div class="box4_content">
             <div>TDS</div>
             <div id="tds_val">0</div>
           </div>
           <div class="box4_img2">
-            <img src="images/up-arrow.png" alt="" />
-            <img src="images/down-arrow.png" alt="" />
+            <img src="up-arrow.png" alt="" />
+            <img src="down-arrow.png" alt="" />
           </div>
         </div>
       </div>
@@ -89,7 +89,7 @@
         <div class="box_6">
           <div class="box_6_1">
             <div class="sos">SOS</div>
-            <div class="sms_img"><img src="images/sms.png" alt=""></div>
+            <div class="sms_img"><img src="sms.png" alt=""></div>
             <div class="details">
               <div class="text_area1">
                 <div class="heading">Name:</div>
@@ -102,7 +102,7 @@
             </div>
             <div class="options">
               <div class="alarm">
-                <button id="alarm_button"><img src="images/alarm.png" alt=""></button>
+                <button id="alarm_button"><img src="alarm.png" alt=""></button>
               </div>
               <div class="pass">
                 <button id="pass_button">Pass</button>
